--- a/docker/widget-template/Dockerfile
+++ b/docker/widget-template/Dockerfile
@@ -33,6 +33,9 @@ RUN echo "output.logstash:" > /etc/filebeat/filebeat.yml && \
     echo "filebeat.inputs:" >> /etc/filebeat/filebeat.yml && \
     echo "- type: log" >> /etc/filebeat/filebeat.yml && \
     echo "  paths: \${LOG_FOLDER}" >> /etc/filebeat/filebeat.yml && \
+    echo "  fields_under_root: true"  >> /etc/filebeat/filebeat.yml && \
+    echo "  fields:" >> /etc/filebeat/filebeat.yml && \
+    echo "    widget: \${WIDGET_NAME:unknown} " >> /etc/filebeat/filebeat.yml && \
     echo "  multiline.pattern: '^\['" >> /etc/filebeat/filebeat.yml && \
     echo '  multiline.negate: true' >> /etc/filebeat/filebeat.yml && \
     echo '  multiline.match: after' >> /etc/filebeat/filebeat.yml && \
