Optimize installing of packages

--- a/docker/widget-oracle-template/Dockerfile
+++ b/docker/widget-oracle-template/Dockerfile
@@ -5,19 +5,17 @@ RUN apk add unzip && mkdir /opt/oracle && \
     unzip '/tmp/oracle-files/instantclient-*.zip' -d /opt/oracle
 
 
-
 FROM tasktrack.telekom.at/gucci-docker-local/widget-template:latest
 
 RUN mkdir -p /usr/share/man/man1 && \
     mkdir -p /opt/oracle/instantclient
 
 RUN export DEBIAN_FRONTEND=noninteractive && \
-    apt update && \
-    apt install -y libaio1 build-essential default-jre --no-install-recommends && \
-    apt clean autoclean && \
-    apt autoremove --yes && \
-    rm -rf /var/lib/{apt,dpkg,cache,log}/ && \
-    rm -rf /var/log/*
+    apt-get update && \
+    apt-get install -y libaio1 build-essential default-jre --no-install-recommends && \
+    apt-get clean autoclean && \
+    apt-get autoremove --yes && \
+    rm -rf /var/lib/{apt,dpkg,cache,log}/ /var/log/*
     
 COPY --from=unpacker /opt/oracle/instantclient_12_2 /opt/oracle/instantclient
 
