[CCF-XXX] Add ignoring logs about kubernetes probes

--- a/docker/logstash/logstash.conf
+++ b/docker/logstash/logstash.conf
@@ -12,7 +12,9 @@ filter {
             match => { "tail" => "%{WORD:action} (esb call for operation=)%{WORD:esb-method}. %{WORD:event-type} (=> ) %{GREEDYDATA:event-payload}"}     
         }
     }
-
+    if [tail] =~ /.*(GET \/package\.json HTTP).*(kube-probe).*/{
+        drop {}
+    }
 }
 
 output {
