[CCF-732] Add Supervisor log parsing

--- a/docker/logstash/logstash.conf
+++ b/docker/logstash/logstash.conf
@@ -4,16 +4,23 @@ input {
     }
 }
 filter {
-    grok {
-            match => { "message" => "\[(?<timestamp>\d{,4}-?\d{,4}-?\d{,4}[T]?\d{,4}:?\d{,4}:?\d{,4}[.,]?\d{,4})\] \[%{WORD:loglevel}\] %{WORD:proc} - %{GREEDYDATA:tail}"}     
-        }
-    if [tail] =~ /^([Ss]tart|[Ff]inish)\s(esb call for operation).*$/ {
-        grok {
-            match => { "tail" => "%{WORD:action} (esb call for operation=)%{WORD:esb-method}. %{WORD:event-type} (=> ) %{GREEDYDATA:event-payload}"}     
+    if [log][file][path] =~ /.*(supervisord.log)$/{
+        grok{
+            match => {"message" => "(?<timestamp>\d+\-\d+\-\d+\s+\d+\:\d+\:\d+\,\d+) %{WORD:loglevel} %{GREEDYDATA:tail}"}
         }
     }
-    if [tail] =~ /.*(GET \/package\.json HTTP).*(kube-probe).*/{
-        drop {}
+    else{
+        grok {
+            match => { "message" => "\[(?<timestamp>\d{,4}-?\d{,4}-?\d{,4}[T]?\d{,4}:?\d{,4}:?\d{,4}[.,]?\d{,4})\] \[%{WORD:loglevel}\] %{WORD:proc} - %{GREEDYDATA:tail}"}     
+        }
+        if [tail] =~ /^([Ss]tart|[Ff]inish)\s(esb call for operation).*$/ {
+            grok {
+                match => { "tail" => "%{WORD:action} (esb call for operation=)%{WORD:esb-method}. %{WORD:event-type} (=> ) %{GREEDYDATA:event-payload}"}     
+            }
+        }
+        if [tail] =~ /.*(GET \/package\.json HTTP).*(kube-probe).*/{
+            drop {}
+        }
     }
 }
 
