[CCF-732] Remove ELK_VER variable from image

--- a/docker/widget-template/Dockerfile
+++ b/docker/widget-template/Dockerfile
@@ -4,9 +4,10 @@ LABEL "maintainer"="viacheslav.nezamai@sytoss.com"
 
 ARG LOGGING_LOGSTASH_HOST
 ARG LOG_FOLDER
+ARG ELK_VER=6.8.0
+
 ENV LOGGING_LOGSTASH_HOST=$LOGGING_LOGSTASH_HOST
 ENV LOG_FOLDER=$LOG_FOLDER
-ENV ELK_VER=6.8.0
 
 RUN apt-get update && \
     apt-get install -y supervisor --no-install-recommends && \
