--- a/docker/widget-oracle-template/Dockerfile
+++ b/docker/widget-oracle-template/Dockerfile
@@ -22,11 +22,11 @@ COPY --from=unpacker /opt/oracle/instantclient_12_2 /opt/oracle/instantclient
 RUN ln -s /opt/oracle/instantclient/libclntsh.so.12.2 /opt/oracle/instantclient/libclntsh.so && \
     ln -s /opt/oracle/instantclient/libocci.so.12.2 /opt/oracle/instantclient/libocci.so
 
-ENV LD_LIBRARY_PATH="/opt/oracle/instantclient"
-ENV OCI_HOME="/opt/oracle/instantclient"
-ENV OCI_LIB_DIR="/opt/oracle/instantclient"
-ENV OCI_INCLUDE_DIR="/opt/oracle/instantclient/sdk/include"
-ENV OCI_VERSION=12
-ENV JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java"
+ENV LD_LIBRARY_PATH="/opt/oracle/instantclient" \
+    OCI_HOME="/opt/oracle/instantclient" \
+    OCI_LIB_DIR="/opt/oracle/instantclient" \
+    OCI_INCLUDE_DIR="/opt/oracle/instantclient/sdk/include" \
+    OCI_VERSION=12 \
+    JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java"
 
 RUN echo '/opt/oracle/instantclient/' | tee -a /etc/ld.so.conf.d/oracle_instant_client.conf && ldconfig
