--- a/itest/package.json
+++ b/itest/package.json
@@ -4,39 +4,16 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "test:bdd": "node ./node_modules/selenium-cucumber-js/index.js -t \"~@ignore\" %NODE_DEBUG_OPTION%"
+    "test:bdd": "./node_modules/.bin/cypress open"
   },
-  "devDependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
-    "@babel/node": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-flow": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "^8.0.4",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "enzyme-async-helpers": "^0.9.1",
-    "enzyme-to-json": "^3.3.5",
-    "express": "^4.14.0",
-    "moment": "^2.24.0",
-    "nock": "^10.0.6",
-    "node-sass": "^4.9.4",
-    "nodemon": "^1.18.9",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "superagent-no-cache": "^0.1.1",
-    "supertest": "^3.4.2"
-  },
+  "devDependencies": {},
   "dependencies": {
-    "selenium": "^2.20.0",
-    "selenium-cucumber-js": "^1.6.2",
-    "selenium-webdriver": "^4.0.0-alpha.4"
+    "cucumber": "^6.0.2",
+    "cypress": "^3.4.1",
+    "cypress-cucumber-preprocessor": "^1.16.2",
+    "cypress-xpath": "^1.4.0"
+  },
+  "cypress-cucumber-preprocessor": {
+    "step_definitions": "cypress/integration/step_definitions/"
   }
 }
