--- a/itest/package.json
+++ b/itest/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "test:bdd": "./node_modules/.bin/cypress open"
+    "test:run": "./node_modules/.bin/cypress run",
+    "test:open": "./node_modules/.bin/cypress open"
   },
   "devDependencies": {},
   "dependencies": {
