--- a/itest/package.json
+++ b/itest/package.json
@@ -7,7 +7,11 @@
     "test:run": "./node_modules/.bin/cypress run",
     "test:open": "./node_modules/.bin/cypress open"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2"
+  },
   "dependencies": {
     "cucumber": "^6.0.2",
     "cypress": "^3.4.1",
