--- a/itest/package.json
+++ b/itest/package.json
@@ -4,9 +4,15 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "test:bdd": "./node_modules/.bin/cypress open"
+    "clean": "node clean.js",
+    "cucumber:reporter": "node cucumber-reporter.js",
+    "test:bdd": "./node_modules/.bin/cypress open",
+    "test:run": "./node_modules/.bin/cypress run",
+     "build": "npm run clean && npm run test:run & npm run cucumber:reporter"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "cucumber-html-reporter": "^5.0.2"
+  },
   "dependencies": {
     "cucumber": "^6.0.2",
     "cypress": "^3.4.1",
@@ -14,6 +20,12 @@
     "cypress-xpath": "^1.4.0"
   },
   "cypress-cucumber-preprocessor": {
-    "step_definitions": "cypress/integration/step_definitions/"
+    "step_definitions": "cypress/integration/step_definitions/",
+    "cucumberJson": {
+      "generate": true,
+      "outputFolder": "cypress/reports",
+      "filePrefix": "",
+      "fileSuffix": ".cucumber"
+    }
   }
 }
