--- a/itest/package.json
+++ b/itest/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "test:run": "./node_modules/.bin/cypress run",
-    "test:open": "./node_modules/.bin/cypress open"
+    "test:open": "./node_modules/.bin/cypress open",
+    "lint": "eslint --ext .js --fix ./cypress"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
@@ -13,7 +14,6 @@
     "eslint-plugin-import": "^2.18.2"
   },
   "dependencies": {
-    "cucumber": "^6.0.2",
     "cypress": "^3.4.1",
     "cypress-cucumber-preprocessor": "^1.16.2",
     "cypress-xpath": "^1.4.0"
