--- a/itest/.eslintrc.json
+++ b/itest/.eslintrc.json
@@ -16,5 +16,9 @@
         "sourceType": "module"
     },
     "rules": {
+        "import/no-extraneous-dependencies": [
+            "error",
+            {"devDependencies": true}
+        ]
     }
 }
