--- a/itest/package.json
+++ b/itest/package.json
@@ -16,11 +16,12 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "cucumber-html-reporter": "^5.0.2",
-    "cypress": "^3.4.1",
+    "cypress": "^3.4.1"
+  },
+  "dependencies": {
     "cypress-cucumber-preprocessor": "^1.16.2",
     "cypress-xpath": "^1.4.0"
   },
-  "dependencies": {},
   "cypress-cucumber-preprocessor": {
     "step_definitions": "cypress/integration/step_definitions/",
     "cucumberJson": {
