Reduce output to Elasticsearch

--- a/docker/logstash/logstash.conf
+++ b/docker/logstash/logstash.conf
@@ -18,6 +18,18 @@ filter {
                 match => { "tail" => "%{WORD:action} (esb call for operation=)%{WORD:esb-method}. %{WORD:event-type} (=> ) %{GREEDYDATA:event-payload}"}     
             }
         }
+        if [tail] =~ /(XML)\s(sent|receive).*$/{
+            grok{
+                match => { "tail" => "XML %{WORD:soap-type}: %{GREEDYDATA:soap-content}"}
+            }
+            mutate{
+                rename => {
+                    "soap-type" => "[soap][type]"
+                    "soap-content" => "[soap][content]"
+                }
+                remove_field => [ "tail" ]
+            }
+        }
         if [tail] =~ /.*(GET \/package\.json HTTP).*(kube-probe).*/{
             drop {}
         }
