--- a/itest/.eslintrc.json
+++ b/itest/.eslintrc.json
@@ -1,4 +1,8 @@
 {
+    "parser": "babel-eslint",
+    "plugins": [
+        "flowtype"
+    ],
     "env": {
         "browser": true,
         "es6": true
