--- a/itest/package.json
+++ b/itest/package.json
@@ -9,22 +9,35 @@
     "test:open": "./node_modules/.bin/cypress open",
     "test:run": "./node_modules/.bin/cypress run",
     "lint": "eslint --ext .js --fix ./cypress",
-    "build": "npm run clean && npm run test:run & npm run cucumber:reporter"
+    "build": "npm run clean && npm run test:run & npm run cucumber:reporter",
+    "flow": "flow check"
   },
   "devDependencies": {
+    "cucumber-html-reporter": "^5.0.2",
+    "cypress": "^3.4.1",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-flowtype": "^3.11.1",
     "eslint-plugin-import": "^2.18.2",
-    "cucumber-html-reporter": "^5.0.2",
-    "cypress": "^3.4.1"
+    "flow-bin": "^0.102.0"
   },
   "dependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-flow": "^7.0.0",
+    "@cypress/browserify-preprocessor": "^2.1.1",
+    "@cypress/webpack-preprocessor": "^4.1.0",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "cypress-cucumber-preprocessor": "^1.16.2",
     "cypress-xpath": "^1.4.0",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   },
   "cypress-cucumber-preprocessor": {
-    "step_definitions": "cypress/integration/step_definitions/",
+    "step_definitions": "cypress/support/step_definitions/",
     "cucumberJson": {
       "generate": true,
       "outputFolder": "cypress/reports",
