[CCF-829] Refactored 'Order validation' scenario, removed 'check-utils' file and solved some lint issues

--- a/itest/.eslintrc.json
+++ b/itest/.eslintrc.json
@@ -13,7 +13,8 @@
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly",
-        "cy": true
+        "cy": true,
+        "Cypress": true
     },
     "parserOptions": {
         "ecmaVersion": 2018,
