[CCF-898] Add ignoring of kubeprobe access logs

--- a/docker/fluentd/hfhs-widgets.conf
+++ b/docker/fluentd/hfhs-widgets.conf
@@ -41,6 +41,10 @@
         @type multi_format
         <pattern>
             format regexp
+            expression /^\[(?<datetime>\d+\-\d+\-\d+T\d+\:\d+\:\d+\.\d+)\] \[(?<loglevel>\w+)\] (?<process>\w+) \- (?<esb-status>([Ss]tart|[Ff]inish|[Ee]xecuting))\s(esb|ESB) method (?<method-name>\S+\(\S*\)) with request:(?<tail>.*)/
+        </pattern>
+        <pattern>
+            format regexp
             expression /^\[(?<datetime>\d+\-\d+\-\d+T\d+\:\d+\:\d+\.\d+)\] \[(?<loglevel>\w+)\] (?<process>\w+) \- (?<tail>.*)/
         </pattern>
         <pattern>
@@ -51,10 +55,29 @@
 </filter>
 
 <match hfhs.**>
+    @type rewrite_tag_filter
+    <rule>
+        key     tail
+        pattern /.*(GET \/package\.json HTTP).*(kube-probe).*/
+        tag     useless
+    </rule>
+    <rule>
+        key     tail
+        pattern /.*(GET \/package\.json HTTP).*(kube-probe).*/
+        tag     logstore
+        invert  true
+    </rule>
+</match>
+
+<match logstore>
     @type elasticsearch
-    host elasticsearch.common
-    port 9200
+    host es.k8s.sytoss.intra
+    port 80
     logstash_format true
     logstash_prefix hfhs-fluentd
     flush_interval 10s
+</match>
+
+<match useless>
+    @type null
 </match>
