--- a/docker/fluentd/hfhs-widgets.conf
+++ b/docker/fluentd/hfhs-widgets.conf
@@ -1,39 +1,48 @@
+# Get microfrontend-hfhs-* widgets
 <source>
     @type tail
     path /var/log/containers/microfrontend-hfhs-*.log
+    path_key source
     pos_file /tmp/microfrontend-hfhs.log.pos
     time_format %Y-%m-%dT%H:%M:%S.%NZ
     tag hfhs.*
     format json
+    refresh_interval 10s
 </source>
-
+# Get microfrontend-product-move
 <source>
     @type tail
     path /var/log/containers/microfrontend-product-move-*.log
+    path_key source
     pos_file /tmp/microfrontend-pm.log.pos
     time_format %Y-%m-%dT%H:%M:%S.%NZ
     tag hfhs.*
     format json
+    refresh_interval 10s
 </source>
-
+# Get microfrontend-product-details
 <source>
     @type tail
     path /var/log/containers/microfrontend-product-details-*.log
+    path_key source
     pos_file /tmp/microfrontend-pd.log.pos
     time_format %Y-%m-%dT%H:%M:%S.%NZ
     tag hfhs.*
     format json
+    refresh_interval 10s
 </source>
-
+# Get microfrontend-search-product
 <source>
     @type tail
     path /var/log/containers/microfrontend-search-product-*.log
+    path_key source
     pos_file /tmp/microfrontend-sp.log.pos
     time_format %Y-%m-%dT%H:%M:%S.%NZ
     tag hfhs.*
     format json
+    refresh_interval 10s
 </source>
-
+# Log processing
 <filter hfhs.**>
     @type parser
     key_name log
@@ -53,23 +62,73 @@
     </parse>
     reserve_data true
 </filter>
-
+# Rewrite tags. needed information to logstore, trash to useless
 <match hfhs.**>
     @type rewrite_tag_filter
     <rule>
-        key     tail
-        pattern /.*(GET \/package\.json HTTP).*(kube-probe).*/
+        key     log
+        pattern /^.*(GET \/package\.json HTTP).*(kube-probe).*$/
         tag     useless
     </rule>
     <rule>
-        key     tail
-        pattern /.*(GET \/package\.json HTTP).*(kube-probe).*/
+        key     log
+        pattern /^.*(GET \/package\.json HTTP).*(kube-probe).*$/
         tag     logstore
         invert  true
     </rule>
 </match>
-
+# filter for adding "env" field
+<filter logstore>
+    @type parser
+    key_name sourse
+    reserve_data true
+    reserve_time true
+    <parse>
+        @type regexp
+        expression /.*\_(?<env>(gucci)\S{0,15})\_.*/
+    </parse>
+</filter>
+# Rewrite tags. needed int in logstore.int, dev in logstore.dev
 <match logstore>
+    @type rewrite_tag_filter
+    <rule>
+        key     env
+        pattern /gucci-dev/
+        tag     dev.logstore
+    </rule>
+    <rule>
+        key     env
+        pattern /gucci-int/
+        tag     int.logstore
+        invert  true
+    </rule>
+    <rule>
+        key     env
+        pattern /gucci/
+        tag     prod.logstore
+        invert  true
+    </rule>
+</match>
+
+<match dev.logstore>
+    @type elasticsearch
+    host es.k8s.sytoss.intra
+    port 80
+    logstash_format true
+    logstash_prefix hfhs-fluentd-dev
+    flush_interval 10s
+</match>
+
+<match int.logstore>
+    @type elasticsearch
+    host es.k8s.sytoss.intra
+    port 80
+    logstash_format true
+    logstash_prefix hfhs-fluentd-int
+    flush_interval 10s
+</match>
+
+<match prod.logstore>
     @type elasticsearch
     host es.k8s.sytoss.intra
     port 80
