[CCF-898] Fix env finding

--- a/docker/fluentd/hfhs-widgets.conf
+++ b/docker/fluentd/hfhs-widgets.conf
@@ -80,7 +80,7 @@
 # filter for adding "env" field
 <filter logstore>
     @type parser
-    key_name sourse
+    key_name source
     reserve_data true
     reserve_time true
     <parse>
