--- a/itest/package.json
+++ b/itest/package.json
@@ -7,7 +7,7 @@
     "clean": "node clean.js",
     "cucumber:reporter": "node cucumber-reporter.js",
     "test:open": "./node_modules/.bin/cypress open",
-    "test:run": "./node_modules/.bin/cypress run --browser chromium",
+    "test:run": "./node_modules/.bin/cypress run",
     "lint": "eslint --ext .js --fix ./cypress",
     "build": "npm run clean && npm run test:run & npm run cucumber:reporter",
     "flow": "flow check"
