--- a/itest/package.json
+++ b/itest/package.json
@@ -31,6 +31,7 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "cypress-cucumber-preprocessor": "^1.16.2",
+    "cypress-node": "0.0.1",
     "cypress-xpath": "^1.4.0",
     "moment": "^2.24.0",
     "oracledb": "^4.0.1",
