--- a/itest/package.json
+++ b/itest/package.json
@@ -34,7 +34,8 @@
     "cypress-xpath": "^1.4.0",
     "moment": "^2.24.0",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "fs-extra": "latest"
   },
   "cypress-cucumber-preprocessor": {
     "step_definitions": "cypress/support/step_definitions/",
