--- a/itest/package.json
+++ b/itest/package.json
@@ -8,7 +8,9 @@
     "cucumber:reporter": "node cucumber-reporter.js",
     "test:open": "./node_modules/.bin/cypress open",
     "test:run": "./node_modules/.bin/cypress run",
-    "test": "./node_modules/.bin/cypress open --env configFile=integration",
+    "test:open:int": "./node_modules/.bin/cypress open --env configFile=integration",
+    "test:open:dev": "./node_modules/.bin/cypress open --env configFile=development",
+    "test:open:mock": "./node_modules/.bin/cypress open --env configFile=hfhsmock",
     "lint": "eslint --ext .js --fix ./cypress",
     "build": "npm run clean && npm run test:run & npm run cucumber:reporter",
     "flow": "flow check"
