--- a/itest/.eslintrc.json
+++ b/itest/.eslintrc.json
@@ -1,29 +1,37 @@
 {
-    "parser": "babel-eslint",
-    "plugins": [
-        "flowtype"
+  "parser": "babel-eslint",
+  "plugins": [
+    "flowtype"
+  ],
+  "env": {
+    "browser": true,
+    "es6": true
+  },
+  "extends": [
+    "airbnb-base"
+  ],
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly",
+    "cy": true,
+    "Cypress": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
+  "rules": {
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": true
+      }
     ],
-    "env": {
-        "browser": true,
-        "es6": true
-    },
-    "extends": [
-        "airbnb-base"
-    ],
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly",
-        "cy": true,
-        "Cypress": true
-    },
-    "parserOptions": {
-        "ecmaVersion": 2018,
-        "sourceType": "module"
-    },
-    "rules": {
-        "import/no-extraneous-dependencies": [
-            "error",
-            {"devDependencies": true}
-        ]
-    }
+    "max-len": [
+      "error",
+      {
+        "code": 200
+      }
+    ]
+  }
 }
