--- a/kubernetes/ns-devops/jenkins-runner/01-sts.yml
+++ b/kubernetes/ns-devops/jenkins-runner/01-sts.yml
@@ -15,7 +15,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: jenkins-runner-token
+  name: jenkins-runner-config
 data:
   RUNNER_TOKEN: "base64token"
   RUNNER_NAME: "base64name"
@@ -50,7 +50,7 @@ spec:
             value: "http://jenkins.service:8080"
           envFrom:
           - secretRef:
-              name: 
+              name: jenkins-runner-config
           volumeMounts:
           - mountPath: "/opt"
             name: script
