[CCF-984] Optimize the image

--- a/docker/jenkins-runner/Dockerfile
+++ b/docker/jenkins-runner/Dockerfile
@@ -1,6 +1,7 @@
 FROM tasktrack.telekom.at/gucci-docker-local/additional-libraries:0.1.0 as libs
 
-RUN apk add unzip && mkdir /opt/oracle && \
+RUN apk add unzip && \
+    mkdir /opt/oracle && \
     unzip '/tmp/oracle-files/instantclient-*.zip' -d /opt/oracle
 
 
@@ -13,13 +14,15 @@ RUN ln -s /opt/oracle/instantclient/libclntsh.so.12.2 /opt/oracle/instantclient/
 RUN mkdir /root/.cache && \
     chmod -R 777 /root/.cache && \
     apt-get update && \
-    apt-get install -y libgconf-2-4 libgtk-3-0 xvfb chromium git --no-install-recommends
+    apt-get install -y libgconf-2-4 libgtk-3-0 xvfb chromium git --no-install-recommends && \
+    apt-get clean autoclean && \
+    apt-get autoremove --yes && \
+    rm -rf /var/lib/{apt,dpkg,cache,log}/
 
 ENV LD_LIBRARY_PATH="/opt/oracle/instantclient" \
     OCI_HOME="/opt/oracle/instantclient" \
     OCI_LIB_DIR="/opt/oracle/instantclient" \
     OCI_INCLUDE_DIR="/opt/oracle/instantclient/sdk/include" \
-    OCI_VERSION=12 \
-    JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java"
+    OCI_VERSION=12
 
 RUN echo '/opt/oracle/instantclient/' | tee -a /etc/ld.so.conf.d/oracle_instant_client.conf && ldconfig
