[CCF-XXX] Add console browser for debug

--- a/docker/jenkins-runner/Dockerfile
+++ b/docker/jenkins-runner/Dockerfile
@@ -1,4 +1,4 @@
-FROM tasktrack.telekom.at/gucci-docker-local/additional-libraries:0.1.0 as libs
+FROM tasktrack.telekom.at/gucci-docker-local/widget-additional-libraries:0.1.0 as libs
 
 RUN apk add unzip && \
     mkdir /opt/oracle && \
@@ -14,7 +14,7 @@ RUN ln -s /opt/oracle/instantclient/libclntsh.so.12.1 /opt/oracle/instantclient/
 RUN mkdir /root/.cache && \
     chmod -R 777 /root/.cache && \
     apt-get update && \
-    apt-get install -y libaio1 libgconf-2-4 libgtk-3-0 xvfb chromium git --no-install-recommends && \
+    apt-get install -y libaio1 libgconf-2-4 libgtk-3-0 xvfb chromium git lynx --no-install-recommends && \
     apt-get clean autoclean && \
     apt-get autoremove --yes && \
     rm -rf /var/lib/{apt,dpkg,cache,log}/
