--- a/itest/package.json
+++ b/itest/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "cucumber-html-reporter": "^5.0.2",
-    "cypress": "^3.6.1",
+    "cypress": "^3.8.3",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-flowtype": "^3.11.1",
@@ -31,10 +31,10 @@
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-flow": "^7.0.0",
     "@cypress/browserify-preprocessor": "^2.1.1",
-    "@cypress/webpack-preprocessor": "^4.1.0",
+    "@cypress/webpack-preprocessor": "^4.1.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
-    "cypress-cucumber-preprocessor": "^1.16.2",
+    "cypress-cucumber-preprocessor": "^2.0.1",
     "cypress-xpath": "^1.4.0",
     "moment": "^2.24.0",
     "oracledb": "^4.0.1",
@@ -43,10 +43,10 @@
     "fs-extra": "^8.1.0"
   },
   "cypress-cucumber-preprocessor": {
-    "step_definitions": "cypress/support/step_definitions/",
+    "step_definitions": "./cypress/support/step_definitions/",
     "cucumberJson": {
       "generate": true,
-      "outputFolder": "cypress/reports",
+      "outputFolder": "./cypress/reports",
       "filePrefix": "",
       "fileSuffix": ".cucumber"
     }
