--- a/itest/package.json
+++ b/itest/package.json
@@ -7,23 +7,29 @@
     "clean": "node clean.js",
     "cucumber:reporter": "node cucumber-reporter.js",
     "test:open": "./node_modules/.bin/cypress open",
-    "test:run": "./node_modules/.bin/cypress run",
+    "test:cypress install\nrun": "./node_modules/.bin/cypress run",
     "test:open:int": "./node_modules/.bin/cypress open --env configFile=integration",
     "test:open:dev": "./node_modules/.bin/cypress open --env configFile=development",
     "test:open:mock": "./node_modules/.bin/cypress open --env configFile=hfhsmock",
+    "test:no_proxy": "  set NO_PROXY=hfhs-mock.gucci-qa.at.inside,dev.gucci-qa.at.inside,int.gucci-qa.at.inside,auth.gucci-qa.at.inside,ppp.test.a1.net,apple && npm run test:open:mock",
+    "test:no_proxyd": "  set NO_PROXY=hfhs-mock.gucci-qa.at.inside,dev.gucci-qa.at.inside,int.gucci-qa.at.inside,auth.gucci-qa.at.inside,ppp.test.a1.net,apple && npm run test:open:dev",
+    "test:no_proxyi": "  set NO_PROXY=hfhs-mock.gucci-qa.at.inside,dev.gucci-qa.at.inside,int.gucci-qa.at.inside,auth.gucci-qa.at.inside,ppp.test.a1.net,int.gucci-qa.at.inside/portal/web/hfhs,apple && npm run test:open:int",
+    "test:run:dev": "./node_modules/.bin/cypress run --env configFile=development",
+    "test:run:mock": "./node_modules/.bin/cypress run --env configFile=hfhsmock",
+    "test:no_proxy2": "set NO_PROXY=hfhs-mock.gucci-qa.at.inside,dev.gucci-qa.at.inside,int.gucci-qa.at.inside,auth.gucci-qa.at.inside,ppp.test.a1.net,apple && npm run test:run:mock",
     "lint": "eslint --ext .js --fix ./cypress",
     "build": "npm run clean && npm run test:run & npm run cucumber:reporter",
     "flow": "flow check"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "cucumber-html-reporter": "^5.0.2",
     "cypress": "^3.8.3",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-flowtype": "^3.11.1",
     "eslint-plugin-import": "^2.18.2",
-    "flow-bin": "^0.102.0",
-    "cross-env": "^5.2.0"
+    "flow-bin": "^0.102.0"
   },
   "dependencies": {
     "@babel/core": "^7.6.4",
