--- a/itest/package.json
+++ b/itest/package.json
@@ -35,12 +35,13 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "cypress-cucumber-preprocessor": "^2.0.1",
+    "cypress-wait-until": "^1.6.1",
     "cypress-xpath": "^1.4.0",
+    "fs-extra": "^8.1.0",
     "moment": "^2.24.0",
     "oracledb": "^4.0.1",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "fs-extra": "^8.1.0"
+    "webpack-cli": "^3.3.10"
   },
   "cypress-cucumber-preprocessor": {
     "step_definitions": "./cypress/support/step_definitions/",
