--- a/itest/package.json
+++ b/itest/package.json
@@ -8,6 +8,7 @@
     "cucumber:reporter": "node cucumber-reporter.js",
     "test:open": "./node_modules/.bin/cypress open",
     "test:run": "./node_modules/.bin/cypress run",
+    "test:run:tags": "./node_modules/.bin/cypress-tags run -e TAGS=\"@hfhs or @gucci\"",
     "test:open:int": "./node_modules/.bin/cypress open --env configFile=integration",
     "test:open:dev": "./node_modules/.bin/cypress open --env configFile=development",
     "test:open:mock": "./node_modules/.bin/cypress open --env configFile=hfhsmock",
